Comment re: db access
It seems to me that the goals of DMS-Press can be met by using the existing publishing interface, with extensions to handle the interim case of needing to handle CNXML (and potentially collxml), rather than having another component talking to the production repository DB.

--- a/pumazi/cnx/planning--dms-editing-tools.org
+++ b/pumazi/cnx/planning--dms-editing-tools.org
@@ -156,4 +156,4 @@ cnxml and collxml formats as well as the completezip structure validator.
 The other library is cnx-db, which will be used in the DMS press application
 as the database layer for committing the content into the archive.
 This library is shared between cnx-archive, cnx-publishing
-and now DMS Press.
+and now DMS Press. RJR concerned why DMS-Press needs DB access
