--- a/kevin/summaries/170220.md
+++ b/kevin/summaries/170220.md
@@ -1,3 +1,8 @@
+## Best Docs to Date
+- [API usage overview](https://github.com/openstax/napkin-notes/blob/master/kevin/160921_biglearnApis/api_usage.md)
+- [BL deployment overview](https://github.com/openstax/napkin-notes/blob/master/kevin/BiglearnArchitectureDeployment.pdf)
+- [Drew's presentation](https://docs.google.com/presentation/d/1qoPqBLD4XqOsIfcM6aJH7IaDQRsxxuA6QBLy4GIZy7w/edit#slide=id.p)
+
 ## SGD-based SPARFA
 
 I reviewed a chunk of the theory behind stochastic gradient descent (SGD) 
