--- a/kevin/summaries/170228.md
+++ b/kevin/summaries/170228.md
@@ -9,6 +9,12 @@
 I started working on the SGD code this week, but my math brain was super slow so I didn't get as far along as I'd hoped 
 (but I did update the SPARFA guide so that should help this week).
 
+I also read the original 
+[Adadelta paper](https://arxiv.org/pdf/1212.5701.pdf)
+to get familiar with some of the details that were omitted in the
+[SGD overview](https://arxiv.org/pdf/1609.04747.pdf)
+I looked at last week.
+
 ## BL API
 
 Dante and I have been discussing various issues as they come up.
