--- a/kevin/summaries/170321.md
+++ b/kevin/summaries/170321.md
@@ -37,7 +37,8 @@ within some fixed time
 SPARFA is stopped
 and the best `W`, `d` matrices are returned.
 
-Each of these plots shows 10 separate imputation runs,
+Each of these plots shows 10 separate runs 
+(each using 10% of the data for imputation),
 and the resulting ~1% variation in accuracy across runs.
 
 ### Some Cause for Concern?
