--- a/kevin/summaries/170328.md
+++ b/kevin/summaries/170328.md
@@ -19,3 +19,18 @@ Peak imputation accuracy imporoves by ~1%
 when SPARFA is allowed to learn from the data:
 
 <img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/CF_LearningComp.png" alt="learning effects" width="300" height="300">
+
+## CLUE Calculations
+
+I reviewed the CLUE calculation code,
+and the derivation of Fisher Information
+([this paper](http://people.missouristate.edu/songfengzheng/Teaching/MTH541/Lecture%20notes/Fisher_info.pdf) has a concise summary).
+
+I believe we can improve the current implementation
+by eliminating special cases that avoid divide-by-zero
+by just adding a lower bound the the Fisher Information values.
+This will allow us to use the "standard" formula
+instead of the approximation we're currently using.
+
+I am also close to assessing the variation in CLUE value
+caused by imputation during SPARFA training.
