--- a/kevin/summaries/170413.md
+++ b/kevin/summaries/170413.md
@@ -11,6 +11,13 @@ to finish my class final project.
 
 ## SGD-based SPARFA
 
+### Python Database Stuff
+
+We need someone who is familiar with `alembic` (python's database migration tookset)
+to set up a skeleton framework for `Biglearn`.
+
+Mike said he's get the python db prototype up and running sometime before next Fri.
+
 ### Effect of W,U,d matrix re-calculation on CLUEs
 
 I am seeing a substantial variation in CLUE means
