--- a/kevin/summaries/170413.md
+++ b/kevin/summaries/170413.md
@@ -6,7 +6,7 @@
 
 ## General Notes
 
-I've taken a few perosnal days this week
+I've taken a few personal days this week
 to finish my class final project.
 
 ## SGD-based SPARFA
