--- a/kevin/summaries/170518.md
+++ b/kevin/summaries/170518.md
@@ -27,3 +27,71 @@ and storing the data in the local database.
 I'm finishing up the last of the TeSR code this week,
 which is responsible to ranking questions
 that are used for SPEs and PEs.
+
+## Ecosystem Exercise Breakdown
+
+The following is a breakdown
+of exercises per `page-module` (PM)
+for the `ecosystems`
+currently sitting on `-dev`.
+
+Of particular interest
+are the lines marked with `*`,
+which represent two different imports
+of the same version of the Biology book.
+
+For some reason,
+there is a large variation
+in the number of exercises
+avilable for CLUE calculations.
+Dante believes that this might be due
+to switching between `-dev`/`-prod` and `-qa`
+instances of the `Exercises` server.
+
+```
+   BOOK UUID@VERSION                        # PMs >= 5 Exs / | frac       TITLE
+                                                  total PMs  |
+  book 947a1417-5fd5-4b3c-ac8f-bd9d1aedf2d2@3.10          2/115 0.017 MacroEcon w/CC
+  book 947a1417-5fd5-4b3c-ac8f-bd9d1aedf2d2@3.9           2/115 0.017
+  book d2fbadca-e4f3-4432-a074-2438c216b62a@3.13          3/172 0.017 Principle of Econ w/CC
+  book d2fbadca-e4f3-4432-a074-2438c216b62a@3.14          3/172 0.017
+  book 08df2bee-3db4-4243-bd76-ee032da173e8@3.6            2/92 0.022 MicroEcon w/CC
+  book 08df2bee-3db4-4243-bd76-ee032da173e8@3.7            2/92 0.022
+* book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.99        96/253 0.379 Biology
+  book 02040312-72c8-441e-a685-20e9333f3e1d@6.20          56/95 0.589 Intro to Soc 2e
+  book 02040312-72c8-441e-a685-20e9333f3e1d@7.11          56/95 0.589
+  book bf96bfc5-e723-46c2-9fa2-5a4c9294fa26@3.4          64/103 0.621 Concepts of Bio w/CC
+  book 99e127f8-f722-4907-a6b3-2d62fca135d6@3.1         126/197 0.640 Anat & Phys w/CC
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.53       166/253 0.656 Biology
+  book 27275f49-f212-4506-b3b1-a4d5e3598b99@3.7         186/278 0.669 College Physics w/CC
+  book 031da8d3-b525-429c-80cf-6c8ed997733a@9.39        187/278 0.673 College Physics
+  book 27275f49-f212-4506-b3b1-a4d5e3598b99@3.26        187/278 0.673 College Physics w/CC
+  book 27275f49-f212-4506-b3b1-a4d5e3598b99@3.3         187/278 0.673
+  book 27275f49-f212-4506-b3b1-a4d5e3598b99@3.7         187/278 0.673
+  book 27275f49-f212-4506-b3b1-a4d5e3598b99@3.7         188/278 0.676
+  book 334f8b61-30eb-4475-8e05-5260a4866b4b@7.42          74/98 0.755 ???
+  book 334f8b61-30eb-4475-8e05-5260a4866b4b@7.45          74/98 0.755
+  book 334f8b61-30eb-4475-8e05-5260a4866b4b@7.46          74/98 0.755
+  book 02040312-72c8-441e-a685-20e9333f3e1d@6.20          74/95 0.779 Intro to Soc 2e
+  book 02040312-72c8-441e-a685-20e9333f3e1d@7.1           74/95 0.779
+  book d393e255-30b3-4ba7-bc78-2fd7a4324ec8@2.6           74/95 0.779 Intro to Soc 2e w/CC
+  book d393e255-30b3-4ba7-bc78-2fd7a4324ec8@2.8           74/95 0.779
+  book 405335a3-7cff-4df2-a9ad-29062a4af261@6.136       217/278 0.781 College Physics w/Courseware
+  book 405335a3-7cff-4df2-a9ad-29062a4af261@6.137       217/278 0.781
+  book 405335a3-7cff-4df2-a9ad-29062a4af261@6.135       218/278 0.784
+  book 405335a3-7cff-4df2-a9ad-29062a4af261@6.136       218/278 0.784
+  book 405335a3-7cff-4df2-a9ad-29062a4af261@6.97        218/278 0.784
+  book dc10e469-5816-411d-8ea3-39a9b0706a48@2.12            4/5 0.800 ???
+  book dc10e469-5816-411d-8ea3-39a9b0706a48@2.14            4/5 0.800
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.53       206/253 0.814 Biology
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.57       206/253 0.814
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.58       206/253 0.814
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.59       206/253 0.814
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.61       206/253 0.814
+  book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.95       206/253 0.814
+* book 185cbf87-c72e-48f5-b51e-f14f21b5eabd@10.99       206/253 0.814
+  book 3402dc53-113d-45f3-954e-8d2ad1e73659@3.45        206/253 0.814 Biology w/CC
+  book 3402dc53-113d-45f3-954e-8d2ad1e73659@3.50        206/253 0.814
+  book 3402dc53-113d-45f3-954e-8d2ad1e73659@3.52        206/253 0.814
+  book d52e93f4-8653-4273-86da-3850001c0786@9.14        167/205 0.815 ???
+```
