--- a/kevin/summaries/170615.md
+++ b/kevin/summaries/170615.md
@@ -42,3 +42,17 @@ which I will start looking at
 once he has verified
 that he can use 
 my python package.
+
+## OpenStax Github Private Repos
+
+Apparently `Biglearn` isn't the only project
+using private repos,
+and OpenStax has reached
+its private repo limit.
+I am in the midst of consolidating
+the legacy `Biglearn` repos
+to free up a few slots,
+but we might want to look
+into whether or not
+we should upgrade OpenStax.
+Just FYI.
