--- a/kevin/summaries/170727.md
+++ b/kevin/summaries/170727.md
@@ -53,11 +53,21 @@ because we (at least right now) want a human in the loop.
 
 To get CI/CDel we need:
 * feature toggles (to allow merging of partially-implemented features)
+  * probably on a per-teacher/student or per-course basis (to control access to paid features and allow canary releases)
 * fast, reliable and fully-automated test suite (if the tests pass, the code is considered deployable)
 
 #### Fast, Reliable and Fully-Automated Test Suite
 
-This virtually requires us to do real TDD (Test-Driven Development),
+Almost everything hinges on having a test suite
+that we run frequently
+(most of it every time code is merged,
+but maybe only once per hour/day
+for more extensive integration tests).
+Without one, we are doomed 
+to slow and painful manual testing,
+necessitating giant infrequent releases.
+
+This virtually requires us to do _real_ TDD (Test-Driven Development),
 and really it means BDD (Behavior-Driven Development),
 which is like TDD at the feature level.
 We currently do a fairly reasonable flavor of TDD,
@@ -65,6 +75,84 @@ which we'd need to level-up,
 but we don't really do BDD
 in any meaningful way.
 
-####
+#### Scaling
+
+We keep running into problems
+that arise only in production
+because of either:
+* the number of active users (somewhat rare)
+* the size data associated with some specific user/course
+* the sheer amount of data in the db
+
+These issues usually boil down
+to a specific query taking too long.
+These queries are often trying to answer a question from scratch
+instead of combining newly-arrived information
+with the previous answer to the question,
+resulting in increased cpu and memory usage
+due to the vast number of records being touched.
+
+We have been solving this problem
+by optimizing the queries
+(which often works but results in some gnarly code)
+and by using ever more powerful (and expensive) AWS instances.
+
+A better approach, IMO, 
+would be to combine smaller, incremental queries
+with AWS autoscaling.
+This would not only allow us to use smaller instances,
+but also easily handle spikes in workload
+(like those that happen when new comoponents are brought up).
+
+I also think we should take the stance
+that if a feature or component doesn't play well with autoscale,
+then we shouldn't release it.
+
+Autoscaling is also one way
+to get "canary releases",
+where a change is rolled out gradually
+to different users
+(however, this only applies when no migrations are involved
+and, in our case, would likely be better handled by feature toggles).
+
+#### Component Architecture
+
+Breaking Tutor/BL up into components
+allows each of them to be independently developed, deployed, and scaled.
+It also potentially allows us
+to seamlessly replace one component with another
+without any end-user downtime,
+and to assess the status of a new or changed component
+under production conditions
+before switching it on.
+
+Components also play nicely with autoscaling,
+limit risk,
+and encourage re-use as new features are added.
+
+#### Consistency Between Staging and Production
+
+This is a tricky problem to solve,
+and might be best avoided entirely.
+
+Cloning the production db into a staging environment is slow,
+but really the only way to be _mostly_ sure that test results
+will replicate what will happen in production.
+(The gap comes from data that has been entered into production
+after the db was copied to staging.)
+If a problem is found with the deployment
+(especially in the area of migrations)
+the production db needs to be re-copied (slow)
+so that the contaminiation from the previous testing
+won't impact the testing of the new code.
+
+Although it might seem crazy at first,
+I think the solution to this problem
+might be to use production as our staging environment.
+This will likely be a tough sell but,
+if we solve the other deployment issues,
+we basically get this option for free.
 
 ### Bottom Line(s)
+
+
