--- a/kevin/summaries/170727.md
+++ b/kevin/summaries/170727.md
@@ -153,6 +153,16 @@ This will likely be a tough sell but,
 if we solve the other deployment issues,
 we basically get this option for free.
 
+#### Potential Downsides
+
+The biggest downsides of anything discussed here are:
+* keeping data consistent across components
+  * solved by "don't change the past"
+* getting the necessary automation in place
+* planning for large features that span multiple components
+
 ### Bottom Line(s)
 
-
+Our problems are solvable,
+but we lack the discipline/desire/know-how to tackle them,
+possibly because we prioritize expediency over everything else.
