--- a/kevin/summaries/170727.md
+++ b/kevin/summaries/170727.md
@@ -28,6 +28,7 @@ at varying levels of detail:
 * [BL Scale and Sustain](https://docs.google.com/document/d/1fmSlXJ1kwxJHXO9dvSskODixDQYTs6pnQe03mWsHchk/edit#heading=h.wfp1mks4mpv4)
 * [Technical Debt in Tutor/BL](https://docs.google.com/document/d/1QjoopHF-VGv2WbLIKT4kYehZ3OKLIgcsn24iaC7Laqw/edit)
 * [BL/Tutor Architecture Vision](https://docs.google.com/document/d/1K6v5_Ua_kQvg9UzuRejzqOfsbIfQhw8Zy8iriygyPTw/edit#heading=h.yxvxbjnoy1pg)
+* [BL Event Store](https://github.com/openstax/napkin-notes/blob/master/kevin/161201_biglearnEventStore.md)
 * pretty much every deployment retrospective
 
 ### Rough Thought Process
