--- a/kevin/summaries/170803.md
+++ b/kevin/summaries/170803.md
@@ -55,5 +55,18 @@ Some FAQs and answers:
   * No.  The plan is to essentially power-down the environment when not actively used to testing.
 * How much cost will this add?
   * Very little; conceivably it might even be a savings.
-    The cost should be roughly (cost of `-prod`)*(fraction of time used for testing) + (small storage cost).
+    The cost should be roughly (cost of `-prod`) * (fraction of time used for testing) + (small storage cost).
     If we keep the system on ice most of the time, it should cost less than the current `-staging` environment, I think.
+
+## SPARFA Algorithm Scaling
+
+I was able to adjust AWS autoscaling group capacity
+from code running on an AWS instance
+(there were some AWS Identity and Access Management changes since last I looked into this).
+
+I am now in the process of translating
+my protocol for distributing work between instances
+from ruby to python.
+This can be used in conjunction with Mike A.'s code
+to automatically handle autoscaling events
+without manual intervention.
