--- a/kevin/summaries/170815.md
+++ b/kevin/summaries/170815.md
@@ -22,6 +22,8 @@ but maybe we need to either
 * find a way to speed it up
 * consider using `-prod` for testing
   * yeah I know this sounds crazy but it's not the first time I've suggested something like this :)
+* keep `-staging` and `-prod` in sync
+  * this is easier with events
 
 ## SPARFA Algorithm Scaling
 
