--- a/kevin/summaries/170815.md
+++ b/kevin/summaries/170815.md
@@ -24,6 +24,7 @@ but maybe we need to either
   * yeah I know this sounds crazy but it's not the first time I've suggested something like this :)
 * keep `-staging` and `-prod` in sync
   * this is easier with events
+  * AWS has some new db features that could prove useful
 
 ## SPARFA Algorithm Scaling
 
