--- a/kevin/summaries/170815.md
+++ b/kevin/summaries/170815.md
@@ -45,7 +45,7 @@ What remains is pulling them together into a coherent repo
 and adding hooking it into the existing SPARFA server code.
 
 I've been creating a 
-[summary](https://docs.google.com/document/d/1bmn2xYBURE90fiZrdNG5CN28vEBCPJbKukDTbUqntZ4/edit#)
+[summary](https://docs.google.com/document/d/1mkuwlVYxZq4c3t-6UxQH00hUAJrBI2YlGuEs-CLjAYY/edit#heading=h.gxpy73hw0cua)
 of the technique I'm using.
 
 ## Feature Toggles
