--- a/kevin/summaries/170822.md
+++ b/kevin/summaries/170822.md
@@ -27,6 +27,9 @@ records/sec:         4000 (200/sec/worker)
 RDS CPU utilization: 40%
 RDS IOPS:            200-250 (limit 300 based on 100 GB storage)
 ```
+
+<img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/aws_rds_write_exper_charts.png" alt="charts" height="300">
+
 (We could get as high as ~5000 records/sec
 before we hit our IOPS limits.)
 
