--- a/kevin/summaries/171102.md
+++ b/kevin/summaries/171102.md
@@ -7,7 +7,7 @@
 
 ## AWS Autoscaling (proof-of-concept)
 
-I've managed to get automatic autoscaling working.
+I've managed to (finally) get automatic autoscaling working!
 
 There is an AWS CloudFormation template
 that creates three autoscaling groups
@@ -18,6 +18,12 @@ The calculator instances
 monitor the incoming request rate
 and the calculation request backlog,
 and launch/terminate instances accordingly.
+
+This setup allows developers
+to perform meaningful unit testing
+while also being able
+to see the performance of the system
+under production loads (or heavier).
 
 Things that should still be done:
 * adjusting the template for different repos
