--- a/kevin/summaries/180222.md
+++ b/kevin/summaries/180222.md
@@ -34,3 +34,31 @@ There are two main things we need to deal with:
   * end-to-end integration
   * "synchronized" deliveries/deployments
   * setup for testing scenarios
+
+Some immediate things I'm trying to do:
+* validate that we can do a zero-downtime deployment
+  * I've done this on a limited scale
+    * system under load, so any downtime is detected
+    * several issues/surprises, but rolling migration seemed to work
+      * need to keep ASGs properly sized during deploy to avoid downtime
+      * users will see blue/green versions of code during deployment
+      * if healthchecks fail, automatic rollback
+      * migrations can still break everything, so `staging` is our friend
+    *  still need to work on tooling
+ * validate zero-downtime migrations
+   * need to put LOTS of data into db
+     * initially, could potentially be done manually
+   * need to check which operations are fast
+     * under load (so non-locking)
+   * need to work out how background updates work
+     * also need to be fast under load
+   * need to translate all that into rails/python migrations
+     * there are some tools to automatically detect non-ZDT migrations
+       * probably worth checking out
+
+## Pretty Picture of the Week
+
+This is still a work in progress,
+but it covers the linkages between a bunch of things.
+
+<img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/DevopsReasoningFlowchart.png" alt="steep" height="200">
