--- a/kevin/summaries/180309.md
+++ b/kevin/summaries/180309.md
@@ -27,7 +27,95 @@ Woo-hoo!
 There is still some cleanup to be done
 (e.g., how to monitor in-progress migrations).
 
-## The Code
+## The Nitty-Gritty
 
 The code is all
 [here](https://github.com/kevinburleigh75/aws_autoscaling/tree/klb_elb_expers).
+
+### Update Commands
+
+All of the update commands have the following form:
+
+```
+aws cloudformation update-stack 
+  --template-url https://s3.amazonaws.com/kevin-templates/ElbTemplate.json 
+  --parameters 
+      ParameterKey=EnvName,ParameterValue=blah 
+      ParameterKey=KeyName,ParameterValue=kevin_va_kp
+      ParameterKey=RepoUrl,ParameterValue=https://github.com/kevinburleigh75/aws_autoscaling.git 
+      ParameterKey=BranchNameOrSha,ParameterValue=klb_elb_expers 
+      ParameterKey=LcImageId,ParameterValue=$LC_IMAGE_ID 
+      ParameterKey=MigrationLcImageId,ParameterValue=$MIGRATION_LC_IMAGE_ID
+      ParameterKey=MigrationDesiredCapacity,ParameterValue=$MIGRATION_DESIRED_CAPACITY 
+      ParameterKey=Asg1DesiredCapacity,ParameterValue=$DESIRED_CAPACITY 
+  --stack-name Stack1
+```
+
+For the purposes of this writeup,
+we'll only really care about the parameters 
+that can be controlled by environment variables.
+
+### The Current Situation
+
+Supoose we currently have image `ami-05679357ab362f128` deployed 
+and everything is running hunky dorey:
+
+There are currently zero instances
+in the migrations ASG,
+and one instance in the API ASG
+(this magnifies the effects
+if the ZDT-deployment doesn't work).
+
+Now we want to deploy image `ami-37884c4d`,
+and its associated migrations.
+
+### First Update: Running Migrations
+
+As a general rule,
+migrations must be compatible
+with the currently-deployed code.
+So migrations are run first.
+
+We want to leave the API servers alone (for now)
+and add one worker (running the new code)
+to the migration ASG:
+
+```
+export LC_IMAGE_ID=ami-05679357ab362f128
+export DESIRED_CAPACITY=1
+
+export MIGRATION_LC_IMAGE_ID=ami-37884c4d
+export MIGRATION_DESIRED_CAPACITY=1
+```
+
+For now, 
+we can check a migration status file
+on the migration ASG worker
+to see if the migrations were successful:
+
+### Second Update: Updating API Servers
+
+We're done with the migration worker,
+and ready to change the code on the API servers:
+
+```
+export LC_IMAGE_ID=ami-37884c4d
+export DESIRED_CAPACITY=1
+
+export MIGRATION_LC_IMAGE_ID=ami-37884c4d
+export MIGRATION_DESIRED_CAPACITY=0
+```
+
+We can see that,
+for a brief period,
+requests are being handled
+both both versions of API server code:
+
+Eventually, the old API server
+is drained of its connections,
+and only the new server remains:
+
+We are now back to our starting state,
+except with different code being run.
+
+
