--- a/kevin/summaries/180309.md
+++ b/kevin/summaries/180309.md
@@ -60,6 +60,8 @@ that can be controlled by environment variables.
 Supoose we currently have image `ami-05679357ab362f128` deployed 
 and everything is running hunky dorey:
 
+<img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/zdt_before.png" alt="steep" height="200">
+
 There are currently zero instances
 in the migrations ASG,
 and one instance in the API ASG
@@ -93,6 +95,8 @@ we can check a migration status file
 on the migration ASG worker
 to see if the migrations were successful:
 
+<img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/zdt_migration_status.png" alt="steep" height="100">
+
 ### Second Update: Updating API Servers
 
 We're done with the migration worker,
@@ -111,11 +115,17 @@ for a brief period,
 requests are being handled
 both both versions of API server code:
 
+<img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/zdt_transition.png" alt="steep" height="200">
+
 Eventually, the old API server
 is drained of its connections,
 and only the new server remains:
 
+<img src="https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/zdt_after.png" alt="steep" height="200">
+
 We are now back to our starting state,
 except with different code being run.
+
+Clients experienced zero downtime during this update.
 
 
