--- a/kevin/summaries/180315.md
+++ b/kevin/summaries/180315.md
@@ -38,7 +38,7 @@ simpler and more concrete.
 It's going slower than I'd hoped
 (mainly because it's a bunch of tool output processing),
 but really it's just a matter 
-of brining all the pieces together.
+of bringing all the pieces together.
 
 ## Kafka
 
