--- a/kevin/summaries/180315.md
+++ b/kevin/summaries/180315.md
@@ -29,7 +29,7 @@ during the demo!
 (Though, if I did,
 it would've been automatically noticed
 and rolled back -
-that would'be been worth ten million points!)
+that would've been worth ten million points!)
 
 I have also been working
 on deployment scripts 
