--- a/kevin/summaries/180412.md
+++ b/kevin/summaries/180412.md
@@ -6,6 +6,12 @@
 - [Kevin's Autoscaling Notes](https://docs.google.com/document/d/1bmn2xYBURE90fiZrdNG5CN28vEBCPJbKukDTbUqntZ4/edit)
 - [Kevin's Biglearn Autoscaling Big Picure](https://docs.google.com/document/d/1JGcHIzmHDaDFlQvznzYgsWHuXBRis9qvtwF6pwaYVfQ/edit)
 
+## CreatorFest
+
+So that happened.
+Seemed like quite the success!
+Go us!
+
 ## Thoughts on Meetings
 
 I wrote up some
