--- a/kevin/summaries/180419.md
+++ b/kevin/summaries/180419.md
@@ -17,14 +17,13 @@ from scatch via CloudFormation templates.
 
 Two pieces remain:
 * automatic storage of secrets
-* tweaks to route tables
+* automatic creation of IAM roles and policies
 
 AWS recently rolled out a SecretsManager service.
 It looks really good, and is easy to use.
-Unfortunately, there is no CloudFormation support for it yet.
-It might be possible to script around this limitation
-if we decide we want to use it
-in lieu of storing encrypted files in S3.
+The ruby `aws-sdk` gem supports it,
+so I might try to use it
+in lieu of S3 buckets.
 
 ## BL API Endpoints
 
