--- a/kevin/summaries/180503.md
+++ b/kevin/summaries/180503.md
@@ -19,6 +19,33 @@ or as a developer in general.
 Hopefully some light will be shed on this
 in the next month or two.
 
+## Deployment Strategy
+
+Once the new BL API is ready for use,
+there are two potential rollout options,
+each with its own pros and cons.
+
+The first 
+is to use the existing BL API database,
+run some migrations,
+and drop in the new code.
+This _should_ work,
+but there is some chance
+that something (e.g., UUID mismatches across servers)
+will fall through the cracks.
+
+The second
+is to construct all of Biglearn
+(including the Scheduler and SPARFA/CLUE/PE calculators)
+and then have Tutor re-populate it from scratch.
+This would minimize the chances
+of inconsistent UUIDs across servers,
+but would involve more development
+before anything gets deployed.
+
+JP and I talked briefly about this last meeting,
+but there probably needs to be some follow-up on it.
+
 ## Cleanup of Loose Ends
 
 I did try to automate
