--- a/kevin/summaries/180503.md
+++ b/kevin/summaries/180503.md
@@ -73,3 +73,39 @@ There are some relatively minor tweaks needed
 when the stack doesn't already exist
 (Mainly, the initial db creation and migration command
 needs too be run before the ASGs are created.)
+
+## Some Performance Stats
+
+Just for fun...
+
+As part of my testing,
+I created 25 BL API clients
+each sending 10 requests/sec.
+In the real system,
+each of these requests
+would contain ~10 student responses,
+so this test represents the workload
+of recording ~2500 responses/sec,
+which is just shy
+of the 2778 responses/sec
+that we could reasonably expect
+if we have 1M very busy data-producing students
+(40% of whom are online at any given time
+answering 25 questions/hr for 4 hrs per evening).
+
+This workload took 10-14% CPU 
+(depending on whether backups were running or not)
+on a very modest `t2.medium` RDS db instance
+(2 vCPUs (cores), 7.3 cents/hr).
+This suggests that the `t2.medium`
+could very likely handle 
+the entire 1M student BL API workload,
+which is really good news for us.
+
+In terms of request/response times,
+of ~500,000 requests to BL API from my desktop,
+about 1-3% had some sort of delay (taking longer than 0.2 sec)
+and 51 resulted in some sort of error (taking longer than 1 sec).
+I'm pretty sure the errors are momentary glitches
+in AWS's elastic load balancers,
+but that could be worth investigating in the future.
