--- a/kevin/summaries/180615.md
+++ b/kevin/summaries/180615.md
@@ -21,6 +21,6 @@ So I'm trying to have this
 wrapped up by Mon
 so JP can start helping me
 with creating some gems
-and the enpoint code.
+and the endpoint code.
 
 The last two weeks have been very slow going...
