--- a/kevin/summaries/180622.md
+++ b/kevin/summaries/180622.md
@@ -46,4 +46,4 @@ I'll probably take some extra days off
 on either side of the 4th
 to try to reset.
 
-Sorry.
+My head just hasn't really been in the game.  Sorry.
