--- a/kevin/summaries/180712.md
+++ b/kevin/summaries/180712.md
@@ -47,7 +47,7 @@ and/or Biglearn.
   (e.g., transactions, CDC, and KSQL)
   to build scalable, extensible streaming systems.
   It does a reasonable job
-  at pointing out limitation and sticking points, too.
+  at pointing out limitations and sticking points, too.
   
 ## Upcoming Vacation
 
