--- a/kevin/summaries/180712.md
+++ b/kevin/summaries/180712.md
@@ -10,11 +10,13 @@
 
 I've been focusing pretty heavily on this since roughly the start of July.
 
-I've talked to pretty much everyone I can think of 
+I've talked to a bunch of folks
 about how their systems / business processes
 interact with other pieces of OpenStax.
 The records of those conversations can be found
 [in Gorilla.](https://drive.google.com/drive/u/1/folders/1dbzBkGC7uTk8p-WrKPArkTXJlj15ZUeL)
+There will probably be some follow-up conversations
+next week.
 
 The next step is to start the writeup,
 which I'm sure will involve asking a bunch of follow-up questions,
