--- a/kevin/summaries/180817.md
+++ b/kevin/summaries/180817.md
@@ -30,6 +30,15 @@ I will (hopefully) reconcile any discrepencies with Dev
 and make sure the linkages between Epics, PRs, design docs, etc.,
 all make sense.
 
+On another front,
+I've been digging into the details
+of Kafka transactions
+and database connectors.
+These are relatively new,
+and solve two HUGE problems:
+* writing atomically to multiple streams
+* converting back-and-forth between data streams and databases
+
 ## Kevin's Reading List
 
 * [Exactly-once Semantics are Possible: Here’s How Kafka Does it](https://www.confluent.io/blog/exactly-once-semantics-are-possible-heres-how-apache-kafka-does-it/):
