--- a/kevin/summaries/180817.md
+++ b/kevin/summaries/180817.md
@@ -14,7 +14,7 @@ My roadtrip was super fun and super relaxing.
 
 I'm in the process
 if creating a
-[new iteration](https://docs.google.com/document/d/1rIW041EHBmQXVR1nvvlO7YNp2SWMN-8SOFzjVnsV0V0/edit#heading=h.d39jccd0dszr)
+[new iteration](https://docs.google.com/document/d/1rIW041EHBmQXVR1nvvlO7YNp2SWMN-8SOFzjVnsV0V0/edit#heading=h.msmgy2ne8uj)
 of my original
 [Thoughts on CNX](https://docs.google.com/document/d/13oeC_Ytq2cD8j52ztttpG3sMXsliUM9rp_rPTmUDvNM/edit#heading=h.kh3o9xhcgamc)
 document.
